--- a/src/app.css
+++ b/src/app.css
@@ -1,8 +1,6 @@
 @font-face {
   font-family: Poppins;
-  font-weight: 400;
-  src: url('./fonts/Poppins-Regular.ttf') format('ttf');
-  font-display: swap;
+  src: url('/fonts/Poppins-Regular.ttf') format('truetype');
 }
 
 h1 {
